--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Titre de la page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Ceci est une page HTML de base</h1>
+    <p>Elle est liée à un fichier CSS externe pour le style et un fichier JavaScript externe pour le comportement dynamique.</p>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
