--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paul Bonnerue</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/Icon.ico">
 </head>
 <body>
     <h1>Ceci est une page HTML de base</h1>
