--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-work.css">
     <link rel="icon" href="images/Icon.ico">
 </head>
 <body>
