--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <h1>Ceci est une page HTML de base</h1>
     <p>Elle est liée à un fichier CSS externe pour le style et un fichier JavaScript externe pour le comportement dynamique.</p>
+    <ul>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="page2.html">Page 2</a></li>
+        <li><a href="page3.html">Page 3</a></li>
+    </ul>
 
     <script src="script.js"></script>
 </body>
