--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="icon" href="images/Icon.ico">
 </head>
 <body>
+    <div id="loader">
+      <div class="boxes">
+    <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</div>
+    </div>
     <h1>Ceci est une page HTML de base</h1>
     <p>Elle est liée à un fichier CSS externe pour le style et un fichier JavaScript externe pour le comportement dynamique.</p>
     <ul>
