--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <title>Paul Bonnerue</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/Icon.ico">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
-   
+<header>
+        <button class="navbar"> 
+            Home
+        </button>
+        <button class="navbar" href="work.html"> 
+            Work
+        </button>
+        <button class="navbar"> 
+            About me
+        </button>
+        <button class="navbar"> 
+            Contact
+        </button>
+</header>
 </div>
     </div>
     <h1>Ceci est une page HTML de base</h1>
