--- a/index.html
+++ b/index.html
@@ -13,29 +13,25 @@
 </head>
 <body>
 <header>
-        <button class="navbar"> 
-            Home
-        </button>
-        <button class="navbar" href="work.html"> 
-            Work
-        </button>
-        <button class="navbar"> 
-            About me
-        </button>
-        <button class="navbar"> 
-            Contact
-        </button>
-</header>
-</div>
+    <div>
+        Code By Paul
     </div>
-    <h1>Ceci est une page HTML de base</h1>
-    <p>Elle est liée à un fichier CSS externe pour le style et un fichier JavaScript externe pour le comportement dynamique.</p>
-    <ul>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="page2.html">Page 2</a></li>
-        <li><a href="page3.html">Page 3</a></li>
-    </ul>
-
+        <button class="navbar">Home</button>
+        <button class="navbar" onclick="location.href='work.html';">Work</button>
+        <button class="navbar">About me</button>
+        <button class="navbar">Contact</button>
+</header>
+    <div class="container">
+    <div class="scroll">
+        <div class="LeftToRight">
+            <p>Paul Bonnerue —</p>
+            <p>Paul Bonnerue —</p>
+            <p>Paul Bonnerue —</p>
+            <p>Paul Bonnerue —</p>
+        </div>
+    </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
