--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 <section style="position: relative;">
     <!-- Image en haut à droite -->
-    <img style="position: absolute; top: 50px; right: 100px; width: 300px; height: 300px; transform: rotate(-13deg);" src="C:\Users\Utilisateur\Desktop\Portfolio\images\Planet.svg" alt="Background Image" />
+    <img style="position: absolute; top: 50px; right: 100px; width: 300px; height: 300px; transform: rotate(-13deg);" src="images/planet.svg" alt="planet" />
     
     <!-- SVG en haut à gauche -->
     <svg style="position: absolute; top: 0; left: 0; width: 100px; height: 100px; color: #B17566;" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-6 w-6">
