--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <button class="navbar"onclick="location.href='contact.html';">Contact</button>
 </header>
 <section style="position: relative;">
-    <img style="position: absolute; top: 50px; right: 11em; width: 22em; height: 22em; transform: rotate(-13deg);" src="C:\Users\Utilisateur\Desktop\Portfolio\images\Planet.svg" alt="planet" />
+    <img style="position: absolute; top: 50px; right: 11em; width: 22em; height: 22em; transform: rotate(-13deg);" src="images/planet.svg" alt="planet" />
 
-    <img style="position: absolute; top: 12em; left: 12em; width: 5em; height: 5em; transform: rotate(-3deg);" src="C:\Users\Utilisateur\Desktop\Portfolio\images\arrow.svg" alt="arrow" />
+    <img style="position: absolute; top: 12em; left: 12em; width: 5em; height: 5em; transform: rotate(-3deg);" src="images/arrow.svg" alt="arrow" />
 
     <div style="position: absolute; top: 230px; left: 250px; color: #B17566; font-size: 34px; font-family: Poppins; font-weight: 600; word-wrap: break-word;">Geography Student<br/>Freelance Web Developer</div>
     
